# racecar_simulator

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/racecar_simulator/: car_params.h  scan_simulator_2d.hpp
install/: local_setup.sh  setup.sh
install/racecar_simulator/lib/racecar_simulator/: simulator
install/racecar_simulator/share/ament_index/resource_index/package_run_dependencies/: racecar_simulator
install/racecar_simulator/share/ament_index/resource_index/parent_prefix_path/: racecar_simulator
install/racecar_simulator/share/racecar_simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/racecar_simulator/share/racecar_simulator/cmake/: racecar_simulatorConfig-version.cmake  racecar_simulatorConfig.cmake
install/racecar_simulator/share/racecar_simulator/environment/: ament_prefix_path.dsv  path.dsv
launch/: simulator.launch.py
log/: latest_build
maps/: levinelobby_track.pgm  map123_path.csv  map7_path.csv  map_E.pgm  map_E.yaml  map_iros.pgm  map_iros.yaml
params/: simulation.yaml  simulator.rviz
src/: param_loader.cpp
src/control_msgs/: CMakeLists.txt  package.xml
src/control_msgs/msg/: CarState.msg  DDN_state.msg  Gps.msg  Obstacle.msg  Waypoint.msg  debug.msg  gps.msg  obstacle.msg  waypoint_array.msg
src/control_msgs/srv/: EncodeInitState.srv  reset.srv  sync_control.srv
src/f1_msgs/: CMakeLists.txt  package.xml
src/f1_msgs/msg/: CarState.msg  Debug.msg  WaypointArray.msg
src/racecar_simulator/: CMakeLists.txt  map7_params.yaml  package.xml  racecar1.xacro
src/racecar_simulator/include/: map_server.hpp
src/racecar_simulator/include/racecar_simulator/: car_params.h  param_loader.h  scan_simulator_2d.hpp  st_kinematics.hpp
src/racecar_simulator/launch/: Austin_simulator.launch  berlin_simulator.launch  c_track_simulator.launch  levinelobby_simulator .launch  map_iv_simulator.launch  multi_racecar_model.launch  multi_racecar_model.launch.xml  porto_simulator.launch  simulator.launch.py  simulator.launch.xml  simulator.rviz
src/racecar_simulator/maps/: c_track.pgm  map_6.yaml
src/racecar_simulator/node/: behavior_controller.cpp  simulator.cpp
src/racecar_simulator/old_file/: mux.cpp
src/racecar_simulator/params/: car_params.yaml  map_server_params.yaml  racecar0.xacro  simulation.yaml  simulator.rviz
src/racecar_simulator/src/: map_publisher.cpp  map_server.cpp  param_loader.cpp  simulator.cpp  st_kinematics.cpp
