<?xml version="1.0"?>
<package format="2">
  <name>control_msgs</name>
  <version>0.1.0</version>
  <description>
    Messages for simple communication between CarMaker and external ROS Node.
  </description>
  <maintainer email="no@support.com">IPG Automotive GmbH/dbe</maintainer>
  <license>IPG Automotive GmbH</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
