<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar_simulator</name>
  <version>0.0.0</version>
  <description>racecar_simulator for F1tenth implemented by ROS2 Humble</description>
  <maintainer email="tlstoddk99@gmail.com">a</maintainer>
  <license>Apache 2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--depend>control_msgs</depend-->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>


  <!-- Test Dependencies -->
  <!-- Uncomment and add if you have test dependencies -->
  <!-- <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
